--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
       font-family: hermanoalto;
       src: url(fonts/HermanoAlto.ttf); }
 
+
+
       table{
         padding: 0;
         margin: 0;
         border-spacing: 0;
+
 
        }
        tr{
@@ -27,6 +30,11 @@
           padding: 0;
           margin: 0;
           border-spacing: 0;
+
+        }
+        button:hover{
+          background-color: #F5028a;
+
         }
 
 
@@ -42,7 +50,7 @@
                 <table style=" width: 100%; height: 50px; background-color: black; padding: 0; margin: 0;">
                   <tr>
                     <td>
-                      <img src="http://fa3d.com.ar/img/logo.png" alt="logo" style="height: auto; width: 5%; margin: 0 auto; display: block; ">
+                      <img src="http://fa3d.com.ar/img/logo.png" alt="logo" style="height: auto; width: 5%; margin: 10px auto; display: block; ">
                     </td>
                   </tr>
                 </table>
@@ -57,18 +65,18 @@
                       <table style="width: 100%; margin: 0; height: auto; text-align: center;">
                         <tr>
                           <td>
-                            <p style="font-family: hermanoalto; font-size: 50px; margin-block-start: 20px; margin-block-end: 20px;">
+                            <p style="font-family: hermanoalto; font-size: 50px; margin-block-start: 10px; margin-block-end: 10px;">
                               WALL - E</p>
                           </td>
                         </tr>
                         <tr>
                           <td>
-                            <p style="font-family: hermanoalto; margin: 5px; "> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <p style="font-family: hermanoalto; margin: 10px; "> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                           </td>
                         </tr>
                         <tr>
                           <td>
-                            <a href="http://fa3d.com.ar/" target="_blank"><button type="button" style=" margin-top: 15px; background-color: black; color: white; font-size: 12px; outline-style: none; ">Ir al sitio</button></a>
+                            <a href="http://fa3d.com.ar/" target="_blank"><button type="button" style=" margin-top: 15px; background-color: black; color: white; font-size: 12px; height: 35px; font-size: 15px; box-shadow: 1px 1px 1px 1px white; border-radius: 10px;border: none; outline: none; ">Ir al sitio</button></a>
 
                           </td>
                         </tr>
@@ -83,47 +91,49 @@
 
             <tr>
               <td>
-                <table class="tabla_main" style="width: 100%; margin: 0; height: auto; " cellspacing="0" cellpadding="0">
+                <table class="tabla_main" style="width: 100%; margin: 0; height: auto; padding: 15px;" cellspacing="0" cellpadding="0">
                   <tr>
                     <td>
                       <table style="width: 100%; height: auto; margin: auto;" cellspacing="0" cellpadding="0">
                         <tr>
                           <td style="width: 55%; height: auto; text-align: center; padding: 10px;">
-                            <h4>Lorem ipsum</h4>
-                            <p style=" margin-left: 20px; "> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <h3>Lorem ipsum</h3>
+                            <p style=" margin-left: 30px; "> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                           </td>
                           <td style="width: 45%; margin: 0; height: auto; text-align: center; ">
-                            <img src="http://fa3d.com.ar/storage/Nhas64HLlqb4dNShqTWhH71r4cxjAnLKUJp08jk1.jpeg" alt="babyyoda" style=" width: 60%; height: auto; margin-right: 20px;">
+                            <img src="http://fa3d.com.ar/storage/Nhas64HLlqb4dNShqTWhH71r4cxjAnLKUJp08jk1.jpeg" alt="babyyoda" style=" width: 60%; height: auto; margin-right: 30px;">
                           </td>
                         </tr>
                       </table>
                     </td>
                   </tr>
+
                   <tr>
                     <td>
-                      <table style="width: 90%; height: auto; align: center; margin: auto;" cellspacing="0" cellpadding="0">
+                      <table style="width: 100%; height: auto; align: center; margin: 10px auto 10px auto;" cellspacing="0" cellpadding="0">
                         <tr>
                           <td style="width: 45%; margin: 0; height: auto; text-align: center; ">
-                            <img src="http://fa3d.com.ar/storage/Nhas64HLlqb4dNShqTWhH71r4cxjAnLKUJp08jk1.jpeg" alt="mategroot" style=" width: 60%; height: auto; margin-left: 20px;">
+                            <img src="http://fa3d.com.ar/storage/Nhas64HLlqb4dNShqTWhH71r4cxjAnLKUJp08jk1.jpeg" alt="mategroot" style=" width: 60%; height: auto; margin-left: 30px;">
                           </td>
                           <td style="width: 55%; height: auto; text-align: center; padding: 10px;">
-                            <h4>Lorem ipsum</h4>
-                            <p style=" margin-right: 20px; text-align: center; "> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <h3>Lorem ipsum</h3>
+                            <p style=" margin-right: 30px; text-align: center; "> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                           </td>
                         </tr>
                       </table>
                     </td>
                   </tr>
+
                   <tr>
                     <td>
                       <table style="width: 100%; height: auto; margin: auto;" cellspacing="0" cellpadding="0">
                         <tr>
                           <td style="width: 55%; height: auto; text-align: center; padding: 10px;">
-                            <h4>Lorem ipsum</h4>
-                            <p style=" margin-left: 20px; "> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <h3>Lorem ipsum</h3>
+                            <p style=" margin-left: 30px; "> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                           </td>
-                          <td style="width: 45%; margin: 0; height: auto; text-align: center; " cellspacing="0" cellpadding="0">
-                            <img src="http://fa3d.com.ar/storage/Nhas64HLlqb4dNShqTWhH71r4cxjAnLKUJp08jk1.jpeg" alt="babyyoda" style=" width: 60%; height: auto; margin-right: 20px;">
+                          <td style="width: 45%; margin: 0; height: auto; text-align: center; " cellspacing="0" cellpadding="0" >
+                            <img src="http://fa3d.com.ar/storage/Nhas64HLlqb4dNShqTWhH71r4cxjAnLKUJp08jk1.jpeg" alt="babyyoda" style=" width: 60%; height: auto; margin-right: 30px;">
                           </td>
                         </tr>
                       </table>
@@ -145,8 +155,8 @@
 
                     </td>
                     <td style="width: 20%; height: auto; text-align: center; padding: 10px; margin-right: 40px; ">
-                      <a href="https://www.instagram.com/fa.impresion3d/" target="_blank" ><img src="http://fa3d.com.ar/img/instagram.png" alt="instagram" style=" width: 30%; height: auto;"></a>
-                      <a href="https://www.facebook.com/fa.impresion3d/" target="_blank" ><img src="http://fa3d.com.ar/img/facebook.png" alt="facebook" style=" width: 30%; height: auto;"></a>
+                      <a href="https://www.instagram.com/fa.impresion3d/" target="_blank" ><img src="http://fa3d.com.ar/img/instagram.png" alt="instagram" style=" width: 30%; height: auto; background-color: #00ff00; border-radius: 50%;"></a>
+                      <a href="https://www.facebook.com/fa.impresion3d/" target="_blank" ><img src="http://fa3d.com.ar/img/facebook.png" alt="facebook" style=" width: 30%; height: auto; background-color: #00ff00; border-radius: 50%;"></a>
                     </td>
                   </tr>
                 </table>
@@ -158,7 +168,10 @@
         </td>
       </tr>
     </table>
+    <script>
 
+
+  </script>
 
   </body>
 
