--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
     font-size: 12px;
     width: 25%;
     }
-
+    @media (min-width: 320px) {
+      table{
+        width: 100%;
+      }
+  }
+  @media (min-width: 1024px){
+    table{
+      width: 650px;
+    }
+  }
     p{
       font-family: helvetica;
     }
@@ -27,7 +36,7 @@
     <table style=" width: 100%; padding: 0; margin: 0;" cellspacing="0" cellpadding="0" >
     <tr>
       <td>
-        <table style=" width: 650px; background-color: white; margin: auto; padding: 0; border: 1px solid black;" cellspacing="0" cellpadding="0">
+        <table style=" background-color: white; margin: auto; padding: 0; border: 1px solid black;" cellspacing="0" cellpadding="0">
           <tr>
             <td>
               <table style=" width: 100%; height: 90px; background-color: #0081b4; padding: 0; margin: 0;">
@@ -57,7 +66,7 @@
               <table style="width: 100%; height: auto;; padding: 0; margin: 0;">
                 <tr>
                   <td style="width: 100%; padding: 0; margin: 0; height: auto; ">
-                    <img src="img/banner_c3.jpg" alt="bannerchica" style="width: 100%; padding: 0; margin: 0; height: auto; ">
+                    <img src="https://via.placeholder.com/650x433" alt="banner" style="width: 100%; padding: 0; margin: 0; height: auto; ">
                 </tr>
               </table>
             </td>
